--- a/my.md.html
+++ b/my.md.html
@@ -7,6 +7,8 @@
 
 Cheat sheet
 =======================================================
+| Key      | Description     |
+| ---      | ---             |
 | t, tx    | toggle win size |
 | I, N, T  | ide             |
 | Nv, Tv   | ide             |
@@ -33,54 +35,47 @@ Keymap
 * +-------+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+---+---+
 * |Shift    |   |   |   |   |   |   |   |   |   |   |Zen  | Fn|
 * +-------+-+-+-+-+-+---+---+---+---+---+-+-+---+-+-+-+---+---+
-*         |PgU|Alt|                       | End   |PgD|
+*         |PgU|Alt|                       | Win   |PgD|
 *         +---+---+-----------------------+-------+---+
 *****************************************************************
 
 <meta name="keywords" content="*memo:my.keymap*">
-
-| Custom   | Key             | App | Description          |
-| ---      | ---             | --- | ---                  |
-|          | F1              | vim | goto win top         |
-|          | F2              | vim | goto win 2           |
-|          | F12             | vim | goto win bottom      |
-| PgUp + h | Ctrl + Left     | vim | tabprev              |
-| PgUp + j | Ctrl + Down     | vim |                      |
-| PgUp + k | Ctrl + Up       | vim |                      |
-| PgUp + l | Ctrl + Right    | vim | tabnext              |
-| PgUp + n | Ctrl + PgDn     | vim | maximize y           |
-| PgUp + p | Ctrl + PgUp     | vim | maximize x           |
-| PgUp + 1 | Win + Left      | win | maximize left        |
-| PgUp + 2 | Win + Up        | win | maximize             |
-| PgUp + 3 | Win + Right     | win | maximize right       |
-| PgUp + a |                 | win | toggle half maximize |
-| PgUp + s | Win + Shift + s | win | screenshot           |
-| PgUp + d | Win + d         | win | desktop              |
-| PgUp + g | Win + g         | win | xbox game bar        |
-| PgUp + r |                 | ahk | reload ahk           |
-
 <meta name="keywords" content="*memo:my.shortcut*">
-Shortcut
-=======================================================
 
-| App       | Key               | Description                                      |
-| ---       | ---               | ---                                              |
-| Win       | Alt + `           | 日本語入力 [英語キーボード]                      |
-| Win       | Alt + Tab         | App切り替え                                      |
-| Win       | Alt + Shift + Tab | App切り替え（逆順）                              |
-| Win       | Win + d           | デスクトップを表示                               |
-| Win       | Win + Up          | ウィンドウの最大化                               |
-| Win       | Win + Left        | ウィンドウを左半分に最大化                       |
-| Win       | Win + Right       | ウィンドウを右半分に最大化                       |
-| Win       | Win + Shift + s   | 範囲を指定してクリップボードにスクリーンショット |
-| wt/mintty | Ctrl + 0          | font scale reset                                 |
-| wt/mintty | Ctrl + -          | font scale -                                     |
-| wt/mintty | Ctrl + =          | font scale +                                     |
-| vim       | Ctrl + h          | window left                                      |
-| vim       | Ctrl + j          | window down                                      |
-| vim       | Ctrl + k          | window up                                        |
-| vim       | Ctrl + l          | window right                                     |
-| vim term  | End               | CpmOpen                                          |
+| App       | Ahk      | Key               | Description                 | Note     |
+| ---       | ---      | ---               | ---                         | ---      |
+| vim       |          | Ctrl + h          | window left                 |          |
+| vim       |          | Ctrl + j          | window down                 |          |
+| vim       |          | Ctrl + k          | window up                   |          |
+| vim       |          | Ctrl + l          | window right                |          |
+| vim       |          | F1                | goto win top                |          |
+| vim       |          | F2                | goto win 2                  |          |
+| vim       |          | F10               | goto win bottom             |          |
+| vim       | PgUp + h | Ctrl + Left       | tabprev                     |          |
+| vim       | PgUp + j | Ctrl + Down       |                             |          |
+| vim       | PgUp + k | Ctrl + Up         |                             |          |
+| vim       | PgUp + l | Ctrl + Right      | tabnext                     |          |
+| vim       | PgUp + p | Ctrl + PgUp       |                             |          |
+| vim       | PgUp + n | Ctrl + PgDn       |                             |          |
+| wt        | PgDn + 1 | Ctrl + Alt + 1    | change to tab 1             |          |
+| wt        | PgDn + 2 | Ctrl + Alt + 2    | change to tab 2             |          |
+| wt        | PgDn + 3 | Ctrl + Alt + 3    | change to tab 3             |          |
+| win       | PgDn + 7 | Win + Left        | maximize left               |          |
+| win       | PgDn + 8 | Win + Up          | maximize                    |          |
+| win       | PgDn + 9 | Win + Right       | maximize right              |          |
+| win       | PgDn + 0 |                   | toggle half maximize        |          |
+| win       | PgDn + s | Win + Shift + s   | screenshot                  |          |
+| win       | PgDn + d | Win + d           | desktop                     |          |
+| win       | PgDn + g | Win + g           | xbox game bar               |          |
+| wt        | PgDn + c | Ctrl + Shift + c  | copy                        | not work |
+| wt        | PgDn + v | Ctrl + Shift + v  | paste                       |          |
+| ahk       | PgDn + r |                   | reload ahk                  |          |
+| win       | Zen      | Alt + `           | 日本語入力 [英語キーボード] |          |
+| win       |          | Alt + Tab         | App切り替え                 |          |
+| win       |          | Alt + Shift + Tab | App切り替え（逆順）         |          |
+| wt/mintty |          | Ctrl + 0          | font scale reset            |          |
+| wt/mintty |          | Ctrl + -          | font scale -                |          |
+| wt/mintty |          | Ctrl + =          | font scale +                |          |
 
 Vim next/prev
 =======================================================
