--- a/os_windows.md.html
+++ b/os_windows.md.html
@@ -96,24 +96,35 @@ choco list -l
 | Ctrl + w                | ウィンドウを閉じる                                                              |
 | Alt + `                 | 日本語入力 [英語キーボード]                                                     |
 | Alt + Tab               | ウィンドウを切り替える                                                          |
-| Windows + l             | 画面ロック                                                                      |
-| Windows + d             | デスクトップを表示                                                              |
-| Windows + e             | エクスプローラーを開く                                                          |
-| Windows + Up            | ウィンドウの最大化                                                              |
-| Windows + Down          | ウィンドウの最小化                                                              |
-| Windows + Left          | ウィンドウを左半分に最大化                                                      |
-| Windows + Right         | ウィンドウを右半分に最大化                                                      |
-| Windows + Tab           | タスクビューを開く                                                              |
-| Windows + Ctrl + Left   | 左の仮想デスクトップへ移動                                                      |
-| Windows + Ctrl + Right  | 右の仮想デスクトップへ移動                                                      |
-| Windows + Shift + s     | 範囲を指定してクリップボードにスクリーンショット                                |
-| Windows + PrintScreen   | 全画面をスクリーンショットして保存 (~/Pictures/スクリーンショット)              |
+| Win + l                 | 画面ロック                                                                      |
+| Win + d                 | デスクトップを表示                                                              |
+| Win + e                 | エクスプローラーを開く                                                          |
+| Win + Up                | ウィンドウの最大化                                                              |
+| Win + Down              | ウィンドウの最小化                                                              |
+| Win + Left              | ウィンドウを左半分に最大化                                                      |
+| Win + Right             | ウィンドウを右半分に最大化                                                      |
+| Win + Tab               | タスクビューを開く                                                              |
+| Win + Ctrl + Left       | 左の仮想デスクトップへ移動                                                      |
+| Win + Ctrl + Right      | 右の仮想デスクトップへ移動                                                      |
+| Win + Shift + s         | 範囲を指定してクリップボードにスクリーンショット                                |
+| Win + PrintScreen       | 全画面をスクリーンショットして保存 (~/Pictures/スクリーンショット)              |
 | Alt + PrintScreen       | アクティブなウィンドウをスクリーンショット (~/OneDrive/画像/スクリーンショット) |
 
 - Windows + PrintScreenの保存先
   - ピクチャ/スクリーンショットを右クリック > プロパティ > 場所で指定
 - Alt + PrintScreenのOneDriveへの保存
   - OneDrive > 設定 > バックアップ > スクリーンショット
+
+<meta name="keywords" content="*memo:os.windows.terminal*">
+<meta name="keywords" content="*memo:os.windows.wt*">
+WindowsTerminal
+=============================================
+## Shortcut
+| Shortcut         | Description       | Note     |
+| ---              | ---               | ---      |
+| Ctrl + Alt + Num | change to tab Num |          |
+| Ctrl + Shift + c | copy              | not work |
+| Ctrl + Shift + v | paste             |          |
 
 <meta name="keywords" content="*memo:os.dos*">
 <meta name="keywords" content="*memo:os.bat*">
