--- a/dev.md.html
+++ b/dev.md.html
@@ -116,7 +116,7 @@ C    | prefix ]        | paste
 - C: copy mode
 - * my key maps
 
-<meta name="keywords" content="*memo:my.tmux.keymap*">
+<meta name="keywords" content="*memo:dev.tmux.keymap.my*">
 ## My Tmux Keymap
 
 App         | Key                    | Description
