--- a/my.md.html
+++ b/my.md.html
@@ -42,11 +42,9 @@ Keymap
 | bash |          | GS, GV             | git                         |
 | bash |          | F, F2              | ferne                       |
 | bash |          | D                  | open dir                    |
-| bash |          | f                  | bmk                         |
-| bash |          | d                  | fd                          |
-| bash |          | r                  | rg                          |
 | bash |          | g                  | git                         |
-| bash |          | m, M               | make                        |
+| bash |          | f, d, r            | fzf [bmk, fd, rg]           |
+| bash |          | M, m               | make                        |
 | bash |          | S                  | setup                       |
 | bash |          | ,f                 | pushd bmk                   |
 | bash |          | ,,                 | pushd                       |
