--- a/my.md.html
+++ b/my.md.html
@@ -46,7 +46,7 @@ Keymap
 | bash |          | f, d, r            | fzf [bmk, fd, rg]           |
 | bash |          | M, m               | make                        |
 | bash |          | S                  | setup                       |
-| bash |          | ,f                 | pushd bmk                   |
+| bash |          | ,+                 | pushd bmk                   |
 | bash |          | ,,                 | pushd                       |
 | bash |          | ,-                 | popd                        |
 
