--- a/lang.md.html
+++ b/lang.md.html
@@ -1,15 +1,4 @@
-<meta vim:set syntax=markdown nowrap:>
-<meta charset="utf-8">
-<link rel="stylesheet" href="inc/default.css">
-<style type="text/css">
-<!--
-body {
-    width: 95%;
-    max-width: 95%;
-}
--->
-</style>
-
+<meta name="keywords" content="*memo:lang*">
 **Lang**
 
 <meta name="keywords" content="*memo:lang.compare*">
@@ -114,7 +103,10 @@ if "%str%" == "A" (
 )
 ~~~
 
-<style class="fallback">body{visibility:hidden}</style>
 <script src="inc/markdeep.min.js"></script>
 <script src="https://casual-effects.com/markdeep/latest/markdeep.min.js"></script>
-
+<link rel="stylesheet" href="inc/default.css">
+<style class="fallback">body{visibility:hidden}</style>
+<style type="text/css"><!-- body { width: 95%; max-width: 95%; } --></style>
+<meta charset="utf-8">
+<meta vim:set syntax=markdown nowrap:>
