add barocco keyboard

--- a/my.md.html
+++ b/my.md.html
@@ -46,6 +46,8 @@ Keymap
 | bash |          | ,,                 | pushd                       |
 | bash |          | ,-                 | popd                        |
 
+## HHK
+
 *****************************************************************
 * +---+---+---+---+---+---+---+---+---+---+---+---+---+---+---+
 * |ESC|F1 |F2 |F3 |F4 |F5 |F6 |F7 |F8 |F9 |F10|F11|F12|Ins|Del|
@@ -59,6 +61,22 @@ Keymap
 *         |PgU|Alt|                       | Win   |PgD|
 *         +---+---+-----------------------+-------+---+
 *****************************************************************
+
+## Mistel Barocco MD600v3
+
+***********************************************************************
+* +---+---+---+---+---+---+     +---+---+---+---+---+---+---+-------+
+* |ESC|F1 |F2 |F3 |F4 |F5 |     |F6 |F7 |F8 |F9 |F10|F11|F12|     BS|
+* +---+-+-+-+-+-+-+-+-+-+-+-+   +-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-----+
+* |Tab  |   |   |   |   | T |     | Y |   |   |   |   |   |   |   \ |
+* +-----+-+-+-+-+-+-+-+-+-+-+-+   +-+-+-+-+-+-+-+-+-+-+-+-+-+-+-----+
+* |Ctrl   |   |   |   |   | G |     | H |   |   |   |   |   | Return|
+* +-------+-+-+-+-+-+-+-+-+-+-+-+   +-+-+-+-+-+-+-+-+-+-+-+-+---+---+
+* |Shift    |   |   |   |   | B |     | N |   |   |   |   |      Zen|
+* +-----+---+-+-+-+-+---+---+-+-+   +-+---+---+-+-+---+---+-+---+---+
+* |Ctrl | Win |Alt|           |     |           |  `  | Pn  |Fn |Ctr|
+* +-----+-----+---+-----------+     +-----------+-----+-----+---+---+
+***********************************************************************
 
 Vim next/prev
 =======================================================
