--- a/dev.md.html
+++ b/dev.md.html
@@ -18,7 +18,7 @@ Keyboard
 =======================================================
 
 <meta name="keywords" content="*memo:dev.hhk*">
-## HHK 60 Key
+## HHKB 60 Keys
 
 *****************************************************************
 * +---+---+---+---+---+---+---+---+---+---+---+---+---+---+---+
@@ -35,7 +35,7 @@ Keyboard
 *****************************************************************
 
 <meta name="keywords" content="*memo:dev.niz*">
-## Niz 84 Key
+## Niz 84 Keys
 
 *********************************************************************
 * +---+ +---+---+---+---+ +---+---+---+---+ +---+---+---+---+ +---+
