--- a/my.md.html
+++ b/my.md.html
@@ -46,7 +46,7 @@ Keymap
 | bash |          | ,,                 | pushd                       |
 | bash |          | ,-                 | popd                        |
 
-## HHK
+## HHKB 60 Keys
 
 *****************************************************************
 * +---+---+---+---+---+---+---+---+---+---+---+---+---+---+---+
@@ -62,7 +62,7 @@ Keymap
 *         +---+---+-----------------------+-------+---+
 *****************************************************************
 
-## Mistel Barocco MD600v3
+## Mistel Barocco MD600v3 62 Keys
 
 ***********************************************************************
 * +---+---+---+---+---+---+     +---+---+---+---+---+---+---+-------+
