--- a/my.md.html
+++ b/my.md.html
@@ -78,6 +78,15 @@ Keymap
 * +-----+-----+---+-----------+     +-----------+-----+-----+---+---+
 ***********************************************************************
 
+### マクロ登録
+
+1. Fn + Layer[123]
+1. Start: Fn + RCtrl
+  1. Push src key
+  1. Push dst key
+  1. Pn
+1. End: Fn + RCtrl
+
 Vim next/prev
 =======================================================
 | Mode         | Key | Description  |
