--- a/my.md.html
+++ b/my.md.html
@@ -74,9 +74,16 @@ Keymap
 * +-------+-+-+-+-+-+-+-+-+-+-+-+   +-+-+-+-+-+-+-+-+-+-+-+-+---+---+
 * |Shift    |   |   |   |   | B |     | N |   |   |   |   |      Zen|
 * +-----+---+-+-+-+-+---+---+-+-+   +-+---+---+-+-+---+---+-+---+---+
-* |Ctrl | Win |Alt|           |     |           |  `  | Pn  |Fn |Ctr|
+* |Ctrl | Win |Alt|   LCtrl   |     |   Space   |  `  | Pn  |Fn |Ctr|
 * +-----+-----+---+-----------+     +-----------+-----+-----+---+---+
 ***********************************************************************
+
+|       | Orig     | New             |
+| ---   | ---      | ---             |
+| macro | CapsLock | LCtrl           |
+| macro | LSpace   | LCtrl           |
+| macro | RAlt     | `               |
+| ahk   | RShift   | Hankaku/Zenkaku |
 
 ### マクロ登録
 
